@@ -101,10 +101,9 @@ var CloudCommander, Util, DOM, CloudFunc, $;
     }
     
     /** function loads css and js of Menu
-     * @param pParent     - this
-     * @param pPosition   -  position of menu
+     * @param pCallBack
      */
-    function load(){
+    function load(pCallBack){
         console.time('menu load');
 
         var lDir = Menu.dir;
@@ -114,7 +113,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
             lDir + 'contextMenu.css'],
             function(){
                 console.timeEnd('menu load');
-                Menu.show();
+                Util.exec(pCallBack);
             });
     }
     
@@ -201,11 +200,16 @@ var CloudCommander, Util, DOM, CloudFunc, $;
     Menu.Keys        = function(pPosition){
         Position = pPosition;
         
-        var lFunc = document.oncontextmenu;        
+        DOM.jqueryLoad(function(){
+            Util.loadOnLoad([Menu.show, load]);
+        });
+                
+        var lFunc = document.oncontextmenu;
         document.oncontextmenu = function(){
             Util.exec(lFunc);
             return Menu.ENABLED;
         };
+
         
         var key_event = (function(pEvent){
             /* если клавиши можно обрабатывать */
@@ -215,6 +219,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
                     var lCurrent = DOM.getCurrentFile();
                     if(lCurrent)
                         $(lCurrent).contextMenu();                
+                    
                     pEvent.preventDefault();
                 }
             }
@@ -223,21 +228,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
         });
            
         /* добавляем обработчик клавишь */
-        if (document.addEventListener)
-            document.addEventListener('keydown', key_event.bind(this),false);
-            
-        else{
-            lFunc = document.onkeydown;
-            document.onkeydown = function(){
-                Util.exec(lFunc);
-                key_event();
-            };
-            
-            /* showing context menu preview*/
-            Menu.show();
-        }
-        
-        DOM.jqueryLoad( load );
+        DOM.addKeyListener( key_event );
     };
     
     cloudcmd.Menu                   = Menu;
