@@ -1,4 +1,4 @@
-var CloudCommander, DOM, $;
+var CloudCommander, Util, DOM, $;
 /* object contains terminal jqconsole */
 
 (function(){
@@ -19,16 +19,12 @@ var CloudCommander, DOM, $;
     /**
      * function loads jquery-terminal
      */
-    function load(){
+    function load(pCallBack){
         console.time('terminal load');
         
         var lDir = 'lib/client/terminal/jquery-terminal/jquery.';
+        DOM.cssLoad(lDir + 'terminal.css');        
         
-        DOM.cssLoad(lDir + 'terminal.css');
-        
-        DOM.socketLoad();
-        
-                
         DOM.anyLoadOnLoad([
             lDir + 'terminal.js',
             lDir + 'mousewheel.js'],
@@ -52,7 +48,7 @@ var CloudCommander, DOM, $;
                 
                 $(window).unbind('resize');
                 
-                JqueryTerminal.show();
+                Util.exec(pCallBack);
             });
     }
     
@@ -85,9 +81,7 @@ var CloudCommander, DOM, $;
         if( DOM.hidePanel() ){
             Hidden = false;
             DOM.show(TerminalId);
-            
             KeyBinding.unSet();
-            
             Term.resume();
         }
     };
@@ -111,12 +105,18 @@ var CloudCommander, DOM, $;
      */
     cloudcmd.Terminal.Keys              = function(){
         /* loading js and css*/
-        DOM.jqueryLoad( load );
-                
-        var key_event = function(event){
+        DOM.jqueryLoad(function(){
+            Util.loadOnLoad([
+                JqueryTerminal.show,
+                load,
+                DOM.socketLoad
+            ]);
+        });
+        
+        /* добавляем обработчик клавишь */
+       DOM.addKeyListener(function(){
             /* если клавиши можно обрабатывать */
-            if(Hidden               &&
-                KeyBinding.get()    &&
+            if(Hidden && KeyBinding.get()    &&
                 event.keyCode === cloudcmd.KEY.TRA){
                     JqueryTerminal.show();
                     event.preventDefault();
@@ -124,16 +124,7 @@ var CloudCommander, DOM, $;
             
             else if(!Hidden && event.keyCode === cloudcmd.KEY.ESC)
                 JqueryTerminal.hide();
-            
-            
-        };
-        
-        /* добавляем обработчик клавишь */
-        if (document.addEventListener)                
-            document.addEventListener('keydown', key_event, false);
-        
-        else
-            document.onkeypress = key_event;
+        });
     };
     
     cloudcmd.Terminal.JqueryTerminal    = JqueryTerminal;    
