@@ -141,7 +141,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
         var lLink = pA.href;
                         
         /* убираем адрес хоста */
-        lLink = '/' + lLink.replace(document.location.href,'');
+        lLink = lLink.replace(cloudcmd.HOST, '');
         
         if (lLink.indexOf(CloudFunc.NOJS) === CloudFunc.FS.length)
             lLink = lLink.replace(CloudFunc.NOJS, '');
@@ -176,6 +176,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
      * function shows FancyBox
      */
     FancyBox.show                       = function(pCallBack){
+        DOM.Images.hideLoad();
         set();
                 
         var lConfig = FancyBox.getConfig(),
@@ -196,43 +197,21 @@ var CloudCommander, Util, DOM, CloudFunc, $;
     };
     
     cloudcmd.Viewer.Keys                = function(){
-        var lCallBack_f = function(){            
-            var lF3 = cloudcmd.KEY.F3,
-                key_event = function(pEvent){
-                /* если клавиши можно обрабатывать */
-                if( KeyBinding.get() )
-                    if(pEvent.keyCode === lF3 && pEvent.shiftKey){
-                        var lCurrentFile = DOM.getCurrentFile();
-                        FancyBox.show(lCurrentFile);
-                        
-                        pEvent.preventDefault();
-                    }
-            };
-               
-            /* добавляем обработчик клавишь */
-            if (document.addEventListener)                
-                document.addEventListener('keydown', key_event, false);
-            
-            else{
-                var lFunc;
-                if(typeof document.onkeydown === 'function')
-                    lFunc = document.onkeydown;
-                
-                document.onkeydown = function(){
-                    if(lFunc)
-                        lFunc();
-                    
-                    key_event();
-                };
-            }
-            
-            /* showing images  preview*/
-            FancyBox.show();
-            DOM.Images.hideLoad();
-        };
-            
         DOM.jqueryLoad(function(){
-            FancyBox.load(lCallBack_f);
+            Util.loadOnLoad([FancyBox.show, FancyBox.load]);
+        });
+        
+        /* добавляем обработчик клавишь */
+        DOM.addKeyListener( function(){
+            var lF3 = cloudcmd.KEY.F3;
+            
+            /* если клавиши можно обрабатывать */
+            if( KeyBinding.get()        &&
+                event.keyCode === lF3  &&
+                event.shiftKey ){
+                    FancyBox.show( DOM.getCurrentFile() );
+                    event.preventDefault();
+                }
         });
     };
     
