@@ -77,6 +77,8 @@ dom.js and util.js.
 
 * Fixed bug with navigation thrue path panel.
 
+* Added function DOM.addKeyListener and Util.loadOnLoad
+
 
 2012.10.01, Version 0.1.7
 
